fix: scrolling in large dialogs on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -124,6 +124,10 @@ pre{
   max-height: 75%;
 }
 
+.md-dialog-content{
+  overflow:visible;
+}
+
 .md-dialog-content--padded{
   padding: 0;
 }
